<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E0F4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#C8E0F4"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C8E0F4"
            android:orientation="vertical"
            android:padding="6dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_border_color_white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_data"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="#d2d2d2" />

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.50"
                    android:background="@null"
                    android:hint="@string/txt_input_date"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_date_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_border_color_white"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="6dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_time"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="#d2d2d2" />

                    <EditText
                        android:id="@+id/et_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.5"
                        android:background="@null"
                        android:hint="请输入时间"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/iv_time_btn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/time" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_border_color_white"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="当事人"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="#d2d2d2" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入当事人"
                    android:textColor="#444444"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_border_color_white"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="地点"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="#d2d2d2" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入地点"
                    android:textColor="#444444"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_border_color_white"
                android:minHeight="90dp"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp" >

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="事情内容"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="#d2d2d2" />

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="请输入事情内容"
                    android:minHeight="200dp"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:textColor="#444444"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--
                     <ProgressBar
                    android:id="@+id/pb_upload_image"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    />
            -->

            <LinearLayout
                android:id="@+id/layout_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="0.22"
                android:background="@drawable/bg_border_color_white"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp" >

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_phote_btn"
                        android:layout_width="30dp"
                        android:layout_height="34dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:src="@drawable/phote" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:gravity="center_horizontal"
                        android:paddingTop="15dp"
                        android:text="图片"
                        android:textColor="#444444"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="#d2d2d2" />

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null" >
                </ImageView>
            </LinearLayout>

            <include
                android:id="@+id/layout_add"
                layout="@layout/include_photo_add"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_newrecord_ok"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="6dp"
        android:background="#1AA81F"
        android:text="上传记录条"
        android:textColor="#ffffff"
        android:textSize="16sp" >
    </Button>

</LinearLayout>